force-app/main/default/objects/Locations__c/Locations__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Stores the various locations an animal can be housed within</description>
    <label>Location</label>
    <nameField>
        <displayFormat>LOC{0000}</displayFormat>
        <label>Location Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>