force-app/main/default/objects/Locations__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <inlineHelpText>Number of animals allocated to the Unit/Foster/Organisation</inlineHelpText>
    <label>Allocation</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>