force-app/main/default/objects/Locations__c/fields/Animal_Preference_Foster__c.field-meta.xml
<CustomField>
    <fullName>Animal_Preference_Foster__c</fullName>
    <inlineHelpText>The Foster&apos;s preference for the animal type to look after</inlineHelpText>
    <label>Animal Preference (Foster)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Animal</valueSetName>
    </valueSet>
</CustomField>