force-app/main/default/objects/Locations__c/fields/Animal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Animal_Record_Id__c</fullName>
    <description>[Animal Shelter Starter] - INTERNAL Only - Stores the Animal ID housed at the Location for internal use</description>
    <label>Animal Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>