force-app/main/default/objects/Locations__c/fields/Assessment_Due__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Due__c</fullName>
    <inlineHelpText>The date of the next assessment of the location is due</inlineHelpText>
    <label>Assessment Due</label>
    <type>Date</type>
</CustomField>