force-app/main/default/objects/Locations__c/fields/Available_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Capacity__c</fullName>
    <description>The available capacity of the block, i.e. number of available units.  Populated by a flow</description>
    <label>Available Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>