force-app/main/default/objects/Locations__c/fields/Available_for_Boarding__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Boarding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether the location is available for Boarding animals</inlineHelpText>
    <label>Available for Boarding</label>
    <type>Checkbox</type>
</CustomField>