force-app/main/default/objects/Locations__c/fields/Block_Status__c.field-meta.xml
<CustomField>
    <fullName>Block_Status__c</fullName>
    <description>Displays the status of the block. Populated by flow</description>
    <label>Block Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>