force-app/main/default/objects/Locations__c/fields/Block_Unit__c.field-meta.xml
<CustomField>
    <fullName>Block_Unit__c</fullName>
    <description>Displays the full path of the block and Unit</description>
    <formula>If ( RecordType.Name = &quot;Unit&quot; ,  Parent_Block__r.Name__c &amp; &quot; / &quot; &amp;  Name__c ,  Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block/Unit</label>
    <type>Text</type>
</CustomField>