force-app/main/default/objects/Locations__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The number of animals that can be housed in this location</inlineHelpText>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>