force-app/main/default/objects/Locations__c/fields/Foster_Contact__c.field-meta.xml
<CustomField>
    <fullName>Foster_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Foster of the animal (Contact)</description>
    <inlineHelpText>The Fosterers contact record</inlineHelpText>
    <label>Foster Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Is_a_Foster__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Foster Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>