force-app/main/default/objects/Locations__c/fields/Internal_Animal_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Internal_Animal_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Animal Shelter Starter] - Internal Lookup, populated by Flow.</description>
    <label>Internal Animal Lookup</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>