force-app/main/default/objects/Locations__c/fields/Last_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessment_Date__c</fullName>
    <inlineHelpText>The date the location was last assessed for suitability</inlineHelpText>
    <label>Last Assessment Date</label>
    <type>Date</type>
</CustomField>