force-app/main/default/objects/Locations__c/fields/Location_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Location_Capacity__c</fullName>
    <inlineHelpText>Select the type of capacity this Location has</inlineHelpText>
    <label>Location Capacity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Animal</fullName>
            </value>
            <value>
                <fullName>Multiple Animals</fullName>
            </value>
            <value>
                <fullName>Untracked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>