force-app/main/default/objects/Locations__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The name of the block or Unit</description>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>