force-app/main/default/objects/Locations__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An Organisation location that an Animal can be transferred to (Account)</description>
    <label>Organisation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Animal_Organisation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Organisation</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>