force-app/main/default/objects/Locations__c/fields/Parent_Block__c.field-meta.xml
<CustomField>
    <fullName>Parent_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Block this unit is contained within</description>
    <label>Parent Block</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Locations__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Block</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Sub Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>