force-app/main/default/objects/Locations__c/fields/Parent_Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Block_Name__c</fullName>
    <description>Formula to return the Parent Block Name, used in Reports</description>
    <formula>IF (  RecordType.Name = &quot;Unit&quot;,  Parent_Block__r.Name__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Block Name</label>
    <type>Text</type>
</CustomField>