force-app/main/default/objects/Locations__c/fields/Parent_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location_Id__c</fullName>
    <formula>CASESAFEID(Parent_Block__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Location Id</label>
    <type>Text</type>
</CustomField>