force-app/main/default/objects/Locations__c/fields/Site_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Record_Id__c</fullName>
    <description>The Record of the Site</description>
    <formula>IF( AND(RecordType.Name =&apos;Unit&apos;, Parent_Block__r.RecordType.Name =&apos;SubBlock&apos;), CASESAFEID(Parent_Block__r.Parent_Block__r.Parent_Block__r.Id),
IF( RecordType.Name =&apos;Unit&apos;, CASESAFEID(Parent_Block__r.Parent_Block__r.Id),
IF( RecordType.Name =&apos;SubBlock&apos;, CASESAFEID(Parent_Block__r.Parent_Block__r.Id),
IF( RecordType.Name =&apos;Block&apos;, CASESAFEID(Parent_Block__r.Id),
IF( RecordType.Name =&apos;Site&apos;, CASESAFEID(Id), NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Record Id</label>
    <type>Text</type>
</CustomField>