force-app/main/default/objects/Locations__c/fields/Sitename__c.field-meta.xml
<CustomField>
    <fullName>Sitename__c</fullName>
    <formula>IF( RecordType.Name =&apos;Unit&apos;, Parent_Block__r.Parent_Block__r.Name__c,
IF( RecordType.Name =&apos;Block&apos;, Parent_Block__r.Name__c,
IF( RecordType.Name =&apos;Site&apos;, Name__c, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sitename</label>
    <type>Text</type>
</CustomField>