force-app/main/default/objects/Locations__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <description>The Total Capacity of the block, i.e. all sub locations. Populated by Flow</description>
    <label>Block Total Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>