force-app/main/default/objects/Locations__c/fields/Unavailability_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unavailability_Reason__c</fullName>
    <description>The reason the location has been made unavailable</description>
    <label>Unavailability Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biohazard/Outbreak</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Staff Shortages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>