force-app/main/default/objects/Locations__c/fields/Unit_Full__c.field-meta.xml
<CustomField>
    <fullName>Unit_Full__c</fullName>
    <description>Flag to indicate unit is full</description>
    <formula>IF(  Allocation__c =  Capacity__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Full</label>
    <type>Checkbox</type>
</CustomField>