force-app/main/default/objects/Locations__c/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <inlineHelpText>The status of the unit</inlineHelpText>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Location_Status</valueSetName>
    </valueSet>
</CustomField>