force-app/main/default/objects/Locations__c/recordTypes/Block.recordType-meta.xml
<RecordType>
    <fullName>Block</fullName>
    <active>true</active>
    <description>A block, i.e. Kennel Block, contains units, i.e. Cages</description>
    <label>Block</label>
</RecordType>