force-app/main/default/objects/Locations__c/recordTypes/Foster.recordType-meta.xml
<RecordType>
  <fullName>Foster</fullName>
  <active>true</active>
  <description>A foster location an animal can be housed at</description>
  <label>Foster</label>
</RecordType>