force-app/main/default/objects/Locations__c/recordTypes/Organisation.recordType-meta.xml
<RecordType>
    <fullName>Organisation</fullName>
    <active>true</active>
    <description>An Organisation is a 3rd Party an Animal can be transferred to</description>
    <label>Organisation</label>
</RecordType>