force-app/main/default/objects/Locations__c/recordTypes/Site.recordType-meta.xml
<RecordType>
    <fullName>Site</fullName>
    <active>true</active>
    <description>A Physical Location, i.e. Animal Centre XXX</description>
    <label>Site</label>
</RecordType>