force-app/main/default/objects/Locations__c/recordTypes/SubBlock.recordType-meta.xml
<RecordType>
    <fullName>SubBlock</fullName>
    <active>true</active>
    <description>A sub division of Block that can contain Units</description>
    <label>SubBlock</label>
</RecordType>