force-app/main/default/objects/Locations__c/recordTypes/Unit.recordType-meta.xml
<RecordType>
    <fullName>Unit</fullName>
    <active>true</active>
    <description>A unit is a sub location of a Block, i.e. Cage, Pen, etc</description>
    <label>Unit</label>
</RecordType>