force-app/main/default/objects/Locations__c/validationRules/Check_Capacity_is_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Capacity_is_Completed</fullName>
    <active>true</active>
    <description>Capacity needs to be a value of 1 or above and can not be 0.  Default is 1</description>
    <errorConditionFormula>Capacity__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>The Capacity of the Location can not be equal to 0.  Default is 1</errorMessage>
</ValidationRule>