force-app/main/default/objects/Locations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Block_Unit__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Last_Assessment_Date__c</columns>
    <columns>Assessment_Due__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>