force-app/main/default/objects/Locations__c/listViews/Foster_Locations.listView-meta.xml
<ListView>
    <fullName>Foster_Locations</fullName>
    <columns>Name__c</columns>
    <columns>Foster_Contact__c</columns>
    <columns>Last_Assessment_Date__c</columns>
    <columns>Assessment_Due__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Locations__c.Foster</value>
    </filters>
    <label>Foster Locations</label>
</ListView>