force-app/main/default/objects/Locations__c/listViews/Organisations_Only.listView-meta.xml
<ListView>
    <fullName>Organisations_Only</fullName>
    <columns>Name__c</columns>
    <columns>Organisation__c</columns>
    <columns>Last_Assessment_Date__c</columns>
    <columns>Assessment_Due__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Locations__c.Organisation</value>
    </filters>
    <label>Organisations Only</label>
</ListView>