force-app/main/default/objects/Locations__c/listViews/Sites.listView-meta.xml
<ListView>
    <fullName>Sites</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Locations__c.Site</value>
    </filters>
    <label>Sites</label>
</ListView>