force-app/main/default/objects/Locations__c/listViews/Sites_Blocks_SubBlocks_and_Units.listView-meta.xml
<ListView>
    <fullName>Sites_Blocks_SubBlocks_and_Units</fullName>
    <columns>Block_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Available_for_Boarding__c</columns>
    <columns>Block_Status__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Last_Assessment_Date__c</columns>
    <columns>Assessment_Due__c</columns>
    <columns>Available_Capacity__c</columns>
    <columns>Unavailability_Reason__c</columns>
    <columns>Capacity__c</columns>
    <columns>Allocation__c</columns>
    <columns>Availability__c</columns>
    <columns>Unit_Full__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Locations__c.Block,Locations__c.Unit,Locations__c.SubBlock,Locations__c.Site</value>
    </filters>
    <label>Sites, Blocks, SubBlocks and Units</label>
</ListView>