force-app/main/default/objects/Locations__c/listViews/Units.listView-meta.xml
<ListView>
    <fullName>Units</fullName>
    <columns>Block_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Available_for_Boarding__c</columns>
    <columns>Location_Capacity__c</columns>
    <columns>Unit_Status__c</columns>
    <columns>Last_Assessment_Date__c</columns>
    <columns>Assessment_Due__c</columns>
    <columns>Capacity__c</columns>
    <columns>Allocation__c</columns>
    <columns>Availability__c</columns>
    <columns>Unavailability_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Locations__c.Unit</value>
    </filters>
    <label>Units</label>
</ListView>